src/Client/MikanClient_CAPI.h

//cut_before

/** 
\brief Client Interface for MikanXR
\defgroup MikanClient_CAPI Client Interface
\addtogroup MikanClient_CAPI 
@{ 
*/
 
// Wrapper Types
//--------------

/** \brief Initializes the MikanXR Client API.
 This function must be called before calling any other client functions. 
 Calling this function after the api is already initialized will return MikanResult_Success.

 \returns MikanResult_Success on success or MikanResult_Error on a general connection error.
 */
MIKAN_PUBLIC_FUNCTION(MikanResult) Mikan_Initialize(MikanLogLevel min_log_level, MikanLogCallback log_callback);
MIKAN_PUBLIC_FUNCTION(bool) Mikan_GetIsInitialized();
MIKAN_PUBLIC_FUNCTION(MikanResult) Mikan_Connect(MikanClientInfo* client_info);
/** \brief Get the client connection status
    \return true if the client is connected to MikanXR Client API
 */
MIKAN_PUBLIC_FUNCTION(bool) Mikan_GetIsConnected();
MIKAN_PUBLIC_FUNCTION(MikanResult) Mikan_SetGraphicsDeviceInterface(MikanClientGraphicsAPI api, void* graphicsDeviceInterface);
MIKAN_PUBLIC_FUNCTION(MikanResult) Mikan_GetGraphicsDeviceInterface(MikanClientGraphicsAPI api, void** outGraphicsDeviceInterface);
MIKAN_PUBLIC_FUNCTION(MikanResult) Mikan_Disconnect();
/** \brief Cleans up the MikanXR Client API
 Free the resources allocated by the MikanXR Client API.
 Calling this function again after the api already cleaned up will return MikanResult_Error.

  \returns MikanResult_Success on success or MikanResult_Error if there was no valid connection.
 */
MIKAN_PUBLIC_FUNCTION(MikanResult) Mikan_Shutdown();